crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_setext_heading_inside_blockquote_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..10
  BLOCK_QUOTE@0..10
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    HEADING@2..10
      HEADING_CONTENT@2..3
        TEXT@2..3 "a"
      NEWLINE@3..4 "\n"
      LINE_PREFIX@4..5 ">"
      LINE_PREFIX@5..6 " "
      SETEXT_HEADING_UNDERLINE@6..9
        SETEXT_HEADING_UNDERLINE@6..9 "---"
      NEWLINE@9..10 "\n"
