crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_setext_underline_caps_inner_blockquote_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..18
  BLOCK_QUOTE@0..18
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    PARAGRAPH@2..4
      TEXT@2..3 "a"
      NEWLINE@3..4 "\n"
    BLOCK_QUOTE_MARKER@4..5 ">"
    BLANK_LINE@5..6
      BLANK_LINE@5..6 "\n"
    BLOCK_QUOTE_MARKER@6..7 ">"
    WHITESPACE@7..8 " "
    HEADING@8..18
      HEADING_CONTENT@8..11
        TEXT@8..11 "> b"
      NEWLINE@11..12 "\n"
      BLOCK_QUOTE_MARKER@12..13 ">"
      WHITESPACE@13..14 " "
      SETEXT_HEADING_UNDERLINE@14..17
        SETEXT_HEADING_UNDERLINE@14..17 "---"
      NEWLINE@17..18 "\n"
