crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_setext_underline_caps_nested_blockquote_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..12
  BLOCK_QUOTE@0..12
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    HEADING@2..12
      HEADING_CONTENT@2..5
        TEXT@2..5 "> a"
      NEWLINE@5..6 "\n"
      LINE_PREFIX@6..7 ">"
      LINE_PREFIX@7..8 " "
      SETEXT_HEADING_UNDERLINE@8..11
        SETEXT_HEADING_UNDERLINE@8..11 "---"
      NEWLINE@11..12 "\n"
