crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_setext_underline_crosses_blockquote_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..10
  HEADING@0..10
    HEADING_CONTENT@0..5
      TEXT@0..5 "> foo"
    NEWLINE@5..6 "\n"
    SETEXT_HEADING_UNDERLINE@6..9
      SETEXT_HEADING_UNDERLINE@6..9 "---"
    NEWLINE@9..10 "\n"
