crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_setext_underline_deeper_blockquote_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..12
  BLOCK_QUOTE@0..12
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    PARAGRAPH@2..4
      TEXT@2..3 "a"
      NEWLINE@3..4 "\n"
    BLOCK_QUOTE_MARKER@4..5 ">"
    WHITESPACE@5..6 " "
    BLOCK_QUOTE@6..12
      BLOCK_QUOTE_MARKER@6..7 ">"
      WHITESPACE@7..8 " "
      HORIZONTAL_RULE@8..12
        HORIZONTAL_RULE@8..11 "---"
        NEWLINE@11..12 "\n"
